[package]
name = "linkchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
futures = "0.3.21"
html-escape = "0.2.11"
lazy_static = "1.4.0"
regex = { version = "1.6.0", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1.20.0", features = ["macros"] }

[features]
